--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
  {
-    "printWidth": 120,
-    "tabWidth": 2,
-    "parser": "babylon",
-    "trailingComma": "none",
-    "jsxBracketSameLine": false,
-    "semi": false,
-    "singleQuote": true
- }
+  "printWidth": 120,
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": false,
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "bracketSpacing": true
+}
